src/less/main.less
/* ... */
.BigTitle{
    font-size: 8em;
    left: -3px;
    font-family: 'Ubuntu', sans-serif;
    font-weight: 700;
    margin-top: 100px;

}
.edosoft-title,
.blog-title{
    color: #f3f7fc;
    text-align: center;
    margin: 0;
}
.servicios-title{
    color: #f3f7fc;
    text-align: center;
}
.equipo-title{
    color: #f3f7fc;
    text-align: center;
}
.contacto-title{
    color: #f3f7fc;
    text-align: center;
}
.titulos-fondo2 {
    font-size: 100px;
    left: -3px;
    line-height: 144px;
    color: #f3f7fc;
    font-family: 'Ubuntu', sans-serif;
    font-weight: 400;
    opacity: 2;
    position: absolute;
    top: 0;
}
.foto-fondo{
    left: 3px;
    opacity: 2;
    position: absolute;
    top: 0;
    width: 100%;
    max-width: 700px;
    margin: auto;
}

.background-photo1{
    position:relative;
    z-index:100;
    background-image: url(img/gsuite-1.jpg);
    background-repeat: no-repeat;
    background-size: 100%;
}
.background-photo2{
    position:relative;
    z-index:100;
    background-image: url(img/edosoft-2.jpg);
    background-repeat: no-repeat;
    background-size: 100%;
}
.background-photo3{
    position:relative;
    background-size: 100%;
    background-image: url(img/desarrollo-movil.png);
    background-repeat: no-repeat;

}
.background-photo3:hover{
    background-size: 100%;
    -webkit-filter: grayscale(0%);
    -webkit-transition: .5s ease-in-out;
    -moz-filter: grayscale(0%);
    -moz-transition: .5s ease-in-out;
    -o-filter: grayscale(0%);
    -o-transition: .5s ease-in-out;
}

.background-photo4{
    position:relative;
    background-size: 100%;
    z-index:100;
    padding-right: 100px;
    background-image: url(img/edosoft-1.jpg);
    background-repeat: no-repeat;
    background-size: cover;
}
.background-photo5{
    position:relative;
    background-size: 100%;
    z-index:100;
    background-image: url(img/chrome-photo.png);
    background-repeat: no-repeat;
}
.background-photo6{
    position:relative;
    z-index:100;
    background-size: 100%;
    background-image: url(img/chrome-1.png);
    background-repeat: no-repeat;
}

.background-photo7{
    position:relative;
    background-size: 100%;
    z-index:100;
    background-image: url(img/chrome-2.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}

.background-photo8{
    position:relative;
    z-index:100;
    background-size: cover;
    background-image: url(img/kit-meet.png);
    background-size: 100%;
    background-repeat: no-repeat;
}

.background-photo9{
    position:relative;
    background-size: 100%;
    z-index:100;
    background-image: url(img/chrome-3.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}

.background-photo10{
    position:relative;
    background-size: 100%;
    z-index:100;
    background-image: url(img/chrome-4.png);
    background-repeat: no-repeat;
}

.background-photo11{
    position:relative;
    background-size: 100%;
    z-index:100;
    background-image: url(img/chrome-5.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}

.background-photo12{
    position:relative;
    background-size: 50%;
    z-index:100;
    background-image: url(img/not-found.png);
    background-repeat: no-repeat;
}
.img-responsive-icon{
    width: 100%;
    max-width: 150px;
}

img-fluid {
    max-width: 250px;
    max-height:180px;
}
/*CSS formulario*/
.formNuevo {
    *::-webkit-input-placeholder {
        /* Google Chrome y Safari */
        font-family:'Ubuntu Mono', monospace;
    }
    *:-moz-placeholder {
        /* Firefox anterior a 19 */
        font-family:'Ubuntu Mono', monospace;
    }
    *::-moz-placeholder {
        /* Firefox 19 y superior */
        font-family:'Ubuntu Mono', monospace;
    }
    *:-ms-input-placeholder {
        /* Internet Explorer 10 y superior */
        font-family:'Ubuntu Mono', monospace;
    }
}
a {
    font-family:'Ubuntu', monospace !important;
    font-size: 14px;
    font-weight: 700;
}
.chrome-photo{
    width: 100%;
}
.img-center {
    text-align: center;
}
.img-gsuiteapp{
    width: 100%;
    max-width: 200px;
}


/*****************************************************************************************************/
.imgmail {
    max-width: 100%;
}


.gicons-description {
    text-align: center;
    vertical-align: middle;
    padding-top: 20px;
    height: 150px;
}

.gsuite-description {
    display: none;
}

@media screen and (min-width: 992px) {
    .gsuite-small {
        visibility: hidden;
        display: none;
    }
    .gsuite-large {
        visibility: visible;
        display: block;
    }
    .video-partner {
        visibility: visible;
        display: block;
        text-align: center;
    }
}

@media screen and (max-width: 992px) {
    .gsuite-small {
        visibility: visible;
        display: block;
    }
    .gsuite-large {
        visibility: hidden;
        display: none;
    }
    .video-partner {
        visibility: hidden;
        display: none;
    }
}


/*.lateral-padding {
    padding-left: 30px;
    padding-right: 155px;
}*/

.withmargin {
    margin-bottom: 40px;
}

.whitebox {
    width: 60px;
    height: 45px;
    background-color: white;
    opacity: 0.6;
    position: absolute;
    z-index: 1;
    /*margin-top: 80px;*/
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.gsuite-icons {
    margin-left: auto;
    /*margin-top: 80px;*/
    margin-right: auto;
    display: block;
    max-width: 40px;
    width: 40px;
    height: 48px;
}

.indicator {
    margin-left: auto;
    margin-right: auto;
    display: block;
   /* width: 10px;
    height: 10px;
    background-color: #5071ae;
    border: 1px solid #5071ae;
    border-radius: 6px;
    display: none;*/
    width: 0;
     height: 0;
     border-right: 20px solid transparent;
     border-top: 10px solid #5071ae;
     border-bottom: 10px solid transparent;
}
/* ... */

